--- a/config/settings.yml
+++ b/config/settings.yml
@@ -7,6 +7,7 @@ plugins:
     validator: 'SalesforceLoginEnabledValidator'
   salesforce_client_id:
     default: ''
+    client: true
   salesforce_client_secret:
     default: ''
     secret: true
