--- a/config/settings.yml
+++ b/config/settings.yml
@@ -16,6 +16,10 @@ plugins:
     textarea: true
   salesforce_username:
     default: ''
+  salesforce_case_tag_name:
+    default: 'salesforce-case'
+  salesforce_new_case_tag_name:
+    default: 'salesforce-case-new'
   salesforce_instance_url:
     default: ''
     client: true
