--- a/config/settings.yml
+++ b/config/settings.yml
@@ -7,19 +7,31 @@ plugins:
     validator: 'SalesforceLoginEnabledValidator'
   salesforce_client_id:
     default: ''
+    client: true
   salesforce_client_secret:
     default: ''
     secret: true
+  salesforce_rsa_private_key:
+    default: ''
+    textarea: true
   salesforce_username:
     default: ''
-  salesforce_password:
-    default: ''
-    secret: true
+  salesforce_case_tag_name:
+    default: 'salesforce-case'
+  salesforce_case_status_tag_enabled:
+    default: true
+  salesforce_case_status_tag_prefix:
+    default: 'case'
   salesforce_instance_url:
     default: ''
     client: true
     hidden: true
-  salesforce_access_token:
+  salesforce_max_feed_items_per_day:
+    default: -1
+    min: -1
+  salesforce_leads_group_id:
     default: ''
-    secret: true
+    hidden: true
+  salesforce_contacts_group_id:
+    default: ''
     hidden: true
