--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "discourse-salesforce",
   "version": "0.1.0",
-  "repository": "git@github.com:discourse/discourse-salesforce.git",
+  "repository": "https://github.com/discourse/discourse-salesforce",
   "author": "Vinoth Kannan",
   "license": "MIT",
   "devDependencies": {
     "@arkweid/lefthook": "^0.7.2",
-    "eslint-config-discourse": "^3.0.0"
+    "eslint-config-discourse": "^3.1.0"
   }
 }
