--- a/config/settings.yml
+++ b/config/settings.yml
@@ -14,6 +14,8 @@ plugins:
   salesforce_rsa_private_key:
     default: ''
     textarea: true
+  salesforce_authorization_server_url:
+    default: 'https://login.salesforce.com'
   salesforce_username:
     default: ''
   salesforce_case_tag_name:
