DEV: Skip contact creation on case sync
Currently, a new Salesforce contact is created during Case sync if the
topic creator isn't mapped to a Salesforce contact during case sync.

This change introduces a site setting to conditionally create and map
contact during case sync.

--- a/config/settings.yml
+++ b/config/settings.yml
@@ -43,3 +43,5 @@ plugins:
     default: ""
   salesforce_case_origin:
     default: 'Web'
+  salesforce_skip_contact_creation_on_case_sync:
+    default: false
