FEATURE: Add default Contact ID for Case Sync Site Setting
Enabling `salesforce_skip_contact_creation_on_case_sync` Site Setting
allows for creation of Cases without Contacts.

This change introduces `salesforce_default_contact_id_for_case_sync`
Site Setting which allows a given Salesforce contact to be configured
for use in syncing Cases.

--- a/config/settings.yml
+++ b/config/settings.yml
@@ -45,3 +45,5 @@ plugins:
     default: 'Web'
   salesforce_skip_contact_creation_on_case_sync:
     default: false
+  salesforce_default_contact_id_for_case_sync:
+    default: ""
