--- a/config/settings.yml
+++ b/config/settings.yml
@@ -47,3 +47,6 @@ plugins:
     default: false
   salesforce_default_contact_id_for_case_sync:
     default: ""
+  salesforce_api_error_logs:
+    default: false
+    hidden: true
